--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Rowan Connaughton</a>.
+    Coded by <a href="https://rowanconnaughton.com/">Rowan Connaughton</a>.
   </div>
 </footer>
   
